@@ -1,5 +1,6 @@
 <unreleased>
 + Add make_installer.sh for Installer Binary Offline on Windows
++ Add dependencies to installer Offline
 
 
 v0.12.19
